# sphy-2d

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile-commands.json  sphy-2d.code-workspace
cmake/: DascriptVendor.cmake  SphyBgfxShaders.cmake  SphyBuildTypes.cmake  SphyDaScript.cmake  SphyDaScriptFusionFix.cmake  SphyTargetKind.cmake
data/modules/core/: manifest.yaml
data/modules/core/assets/textures/: background1.dds  background2.dds
data/modules/core/assets/ui/: audio.rml  chat.rml  connect-to-host.rml  debug.rml  display.rml  graphics.rml  load-game.rml  menu.rml  mod-option-list.rml  modding-tools-menu.rml  modding-tools-obj.rml  options.rml  style.rcss  test.rcss  test.rml  tests.rml  tmp-menu-page.rml  tutorial.rcss
data/modules/core/defs/: client.yaml  engine.yaml  server.yaml
data/modules/engine/: manifest.yaml
data/modules/engine/scripts/: init.das  init.lua
data/modules/test-mod/: manifest.yaml
data/modules/test-mod/various-chunk/: chungus.yaml  def-main-thrust.yaml  test-ship.yaml
game-dir/assets/ui/: Untitled
game-dir/defs/: client.yaml  engine.yaml  lol.yaml  server.yaml
scripts/: build.sh  convert-dds.sh  deploy.sh  init-cmdjson.sh  init-prj.sh  init-sphy-2d.sh  setup-env-fedora.sh  test-client-run.sh  test-server-run.sh
shader/: common.sc
shader/atlas-debug/: fs_atlas-debug.sc  varying.def.sc  vs_atlas-debug.sc
shader/blueprint-grid/: fs_blueprintgrid.sc  vs_blueprintgrid.sc
shader/debug-grid/: fs_debuggrid.sc  varying.def.sc  vs_debuggrid.sc
shader/distant-stars/: fs_distantstars.sc  varying.def.sc  vs_distantstars.sc
shader/geom/: fs_geom.sc  varying.def.sc  vs_geom.sc
shader/rmlui/: fs_rmlui.sc  varying.def.sc  vs_rmlui.sc
shader/sdf-shape/: fs_sdf-shape.sc  varying.def.sc  vs_sdf-shape.sc
shader/tex-rectangle/: fs_texrect.sc  varying.def.sc  vs_texrect.sc
src/: CMakeLists.txt
src/common/data-definitions/: client-def.hpp
src/common/helper/: CMakeLists.txt  item-lib-old.hpp  item-lib.hpp  logging.hpp  shelf-allocator.hpp  sphy-2d.cpp  sphy-2d.hpp  std-inc.hpp
src/common/helper/config-manager/: config-manager.cpp  config-manager.hpp  config-node.cpp  config-node.hpp
src/common/networking/: CMakeLists.txt  net-shared.hpp  protocol.hpp  tcp-client.cpp  tcp-client.hpp  tcp-server.cpp  tcp-server.hpp  udp-client.cpp  udp-client.hpp  udp-server.cpp  udp-server.hpp
src/core/: CMakeLists.txt
src/core/ai/: CMakeLists.txt  task-stack.cpp  task-system.cpp  task-system.hpp  task.hpp
src/core/ai/basic/: task-basic.cpp  task-basic.hpp
src/core/ai/module/: task-turret.cpp  task-turret.hpp
src/core/client/: CMakeLists.txt  client-main.cpp  client-main.hpp  client.cpp  client.hpp  main.cpp  model.cpp  model.hpp  sphy-client.cpp  sphy-client.hpp
src/core/client/render/: CMakeLists.txt  render-engine.cpp  render-engine.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex-defines.hpp
src/core/client/ui/: CMakeLists.txt  rmlui-renderinterface.cpp  rmlui-renderinterface.hpp  rmlui-systeminterface.cpp  rmlui-systeminterface.hpp  ui-tab-panel.cpp  ui-tab-panel.hpp  user-input.cpp  user-input.hpp  user-interface.cpp  user-interface.hpp
src/core/client/win/: atlas-debug-view.cpp  atlas-debug-view.hpp  main-window.cpp  main-window.hpp
src/core/ecs/: CMakeLists.txt  asset-factory.cpp  asset-factory.hpp  comp-struct.cpp  ecs.cpp  ecs.hpp  ptr-handle.hpp
src/core/ecs/components/: CMakeLists.txt  comp-ai.hpp  comp-gfx.hpp  comp-ident.hpp  comp-lifetime.hpp  comp-module.hpp  comp-phy.cpp  comp-phy.hpp  comp-ship.hpp  comp-storage.cpp  comp-storage.hpp  comp-struct.hpp  comp-tag.hpp  comp-turret.cpp  comp-turret.hpp
src/core/ecs/systems/: CMakeLists.txt  ptr-handle.hpp  sys-ai.hpp  sys-lifetime.hpp  sys-phy.cpp  sys-phy.hpp  sys-turret.cpp  sys-turret.hpp
src/core/game-objects/libraries/: CMakeLists.txt  lib-asteroid.cpp  lib-asteroid.hpp  lib-collider.cpp  lib-collider.hpp  lib-hull.cpp  lib-hull.hpp  lib-item.cpp  lib-item.hpp  lib-modules.cpp  lib-modules.hpp  lib-projectile.cpp  lib-projectile.hpp  lib-station-part.cpp  lib-station-part.hpp  lib-textures.cpp  lib-textures.hpp
src/core/mod/: CMakeLists.txt  lua-interpreter.cpp  lua-interpreter.hpp  mod-manager-client.cpp  mod-manager.cpp  mod-manager.hpp  sphy-bindings.cpp  sphy-bindings.hpp
src/core/modding/: CMakeLists.txt  modding-tools.cpp  modding-tools.hpp
src/core/server/: CMakeLists.txt  engine-impl.hpp  engine.cpp  engine.hpp  entity-spawner.cpp  entity-spawner.hpp  main.cpp  server-main.cpp  server-main.hpp  server.cpp  server.hpp
src/core/server/comms/: tcp-server.cpp  tcp-server.hpp  udp-server.cpp  udp-server.hpp
src/core/world/: CMakeLists.txt  sector.cpp  sector.hpp  world.cpp  world.hpp
src/misc/: CMakeLists.txt  version.hpp  work-distributor.cpp  work-distributor.hpp  work-sequencer.cpp  work-sequencer.hpp
src/misc/ai/: task-data.hpp  task-stack.cpp  task-system.hpp
src/misc/containers/: CMakeLists.txt  aabb-tree.hpp  free-vector.hpp  matrix2d.hpp
src/misc/data-definitions/: CMakeLists.txt  client-def.hpp  cmd-options.hpp  control-def.hpp  ship-def.hpp  turret-def.hpp  world-def.hpp
src/misc/helper/: CMakeLists.txt  cmd-options.hpp  command-node.cpp  command-node.hpp  item-lib.hpp  logging.hpp  os-helper.cpp  os-helper.hpp  save-file-dialog.cpp  save-file-dialog.hpp  sphy-2d.cpp  std-inc.hpp
src/misc/helper/config-manager/: config-manager.cpp  config-manager.hpp  config-node.cpp  config-node.hpp
src/misc/networking/: CMakeLists.txt  exchange-sequence.cpp  exchange-sequence.hpp  net-shared.hpp  protocol.cpp  protocol.hpp  tcp-client.cpp  tcp-client.hpp  tcp-server.cpp  tcp-server.hpp  udp-client.cpp  udp-client.hpp  udp-server.cpp  udp-server.hpp
test/: test-shelf-allocator.cpp
test-app/test-client/: main.cpp  test-client.cpp  test-client.hpp
test-app/test-server/: main.cpp  test-server.cpp  test-server.hpp
test/test-client/: CMakeLists.txt  main.cpp  test-client.cpp  test-client.hpp
test/test-server/: CMakeLists.txt
(+33 files in other folders)
